--- a/01. Date, Time, Time Series Data.ipynb
+++ b/01. Date, Time, Time Series Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "source": [
     "from datetime import datetime as dt\n",
     "from datetime import timedelta as td\n",
@@ -12,8 +12,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Datetime objects"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "source": [
     "dt1 = dt.now()    # current time\n",
     "print(dt1)"
@@ -31,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "source": [
     "print(f\"year: {dt1.year}\")\n",
     "print(f\"month: {dt1.month}\")\n",
@@ -44,17 +51,14 @@
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "year: 2021\n",
-      "month: 8\n",
-      "day: 29\n",
-      "hour: 1\n",
-      "minute: 40\n",
-      "second: 21\n",
-      "microseconds: 106907\n",
-      "timezone: None\n"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'dt1' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-2a273c14bf0b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"year: {dt1.year}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"month: {dt1.month}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"day: {dt1.day}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"hour: {dt1.hour}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"minute: {dt1.minute}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dt1' is not defined"
      ]
     }
    ],
@@ -62,9 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "source": [
-    "# datetime ... ulozi datum do promenne\n",
+    "# funkce datetime ... ulozi datum do promenne\n",
     "dt2 = dt(year=2021, month=7, day=31)\n",
     "print(dt2)\n",
     "print(type(dt2))"
@@ -83,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "source": [
     "# metoda date - datovy typ dt.date - vraci datum \n",
     "print(dt2.date())   \n",
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "source": [
     "# metoda time - datovy typ dt.time - vraci cas\n",
     "print(dt1.time())\n",
@@ -122,8 +126,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Timedelta objects"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "source": [
     "# timedelta ... prace s trvanim casu\n",
     "td1 = td(days=5, hours=3, minutes=30)\n",
@@ -150,6 +161,36 @@
       "Celkova doba trvani: 13 days, 3:29:00\n",
       "9 days, 13:52:45\n",
       "Cekovy pocet sekund v 1 dni: 86,400\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Operations on datetime objects"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# today's date\n",
+    "today = dt.today()\n",
+    "print(f\"Todays date: {today}\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'dt' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-a625fe4b9401>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# today's date\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtoday\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoday\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Todays date: {today}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dt' is not defined"
      ]
     }
    ],
