--- a/01. Date, Time, Time Series Data.ipynb
+++ b/01. Date, Time, Time Series Data.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "dt1 = dt.now()    # current time\n",
     "print(dt1)"
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2021-08-29 01:40:21.106907\n"
+      "2021-08-30 18:05:41.966389\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "print(f\"year: {dt1.year}\")\n",
     "print(f\"month: {dt1.month}\")\n",
@@ -51,14 +51,17 @@
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'dt1' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-2a273c14bf0b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"year: {dt1.year}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"month: {dt1.month}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"day: {dt1.day}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"hour: {dt1.hour}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"minute: {dt1.minute}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dt1' is not defined"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "year: 2021\n",
+      "month: 8\n",
+      "day: 30\n",
+      "hour: 18\n",
+      "minute: 5\n",
+      "second: 41\n",
+      "microseconds: 966389\n",
+      "timezone: None\n"
      ]
     }
    ],
@@ -66,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "source": [
     "# funkce datetime ... ulozi datum do promenne\n",
     "dt2 = dt(year=2021, month=7, day=31)\n",
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "# metoda date - datovy typ dt.date - vraci datum \n",
     "print(dt2.date())   \n",
@@ -107,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "source": [
     "# metoda time - datovy typ dt.time - vraci cas\n",
     "print(dt1.time())\n",
@@ -118,7 +121,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "01:40:21.106907\n",
+      "18:05:41.966389\n",
       "<class 'datetime.time'>\n"
      ]
     }
@@ -175,25 +178,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "source": [
     "# today's date\n",
     "today = dt.today()\n",
-    "print(f\"Todays date: {today}\")"
+    "print(f\"Todays date: {today}\")\n",
+    "print(dt.now())\n",
+    "\n",
+    "# +/- of datetime objects\n",
+    "date_5days_later = today + td(days=5)\n",
+    "print(f\"5 days later: {date_5days_later}\")\n",
+    "date_5days_ago = today - td(days=5)\n",
+    "print(f\"5 days ago: {date_5days_ago}\")\n",
+    "\n",
+    "# comparison of datetime objects:\n",
+    "print(date_5days_ago < today < date_5days_later)\n",
+    "\n",
+    "# pozor na scitani casu - musim secit datum vcetne casu + timedelta objekt a na to cele aplikovat metodu time()\n",
+    "current_timestamp = dt.now()\n",
+    "time_now = current_timestamp.time()\n",
+    "print(f\"Time now: {time_now}\")\n",
+    "time_5min_later = (current_timestamp + td(minutes=5)).time()\n",
+    "print(f\"Time + 5 min: {time_5min_later}\")\n",
+    "time_5min_ago = (current_timestamp - td(minutes=5)).time()\n",
+    "print(f\"Time - 5 minutes: {time_5min_ago}\")\n",
+    "print(time_5min_ago < time_now < time_5min_later)\n"
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'dt' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-a625fe4b9401>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# today's date\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtoday\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoday\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Todays date: {today}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dt' is not defined"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Todays date: 2021-08-30 20:35:32.058039\n",
+      "2021-08-30 20:35:32.058488\n",
+      "5 days later: 2021-09-04 20:35:32.058039\n",
+      "5 days ago: 2021-08-25 20:35:32.058039\n",
+      "True\n",
+      "Time now: 20:35:32.059196\n",
+      "Time + 5 min: 20:40:32.059196\n",
+      "Time - 5 minutes: 20:30:32.059196\n",
+      "True\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Modifying datetime objects"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "source": [
+    "dt1 = dt.now()\n",
+    "print(dt1)\n",
+    "dt2 = dt1.replace(year=2022, month=1, day=1)\n",
+    "print(dt2)\n",
+    "dt3 = dt(year=2022, month=1, day=1, hour=dt1.hour, minute=dt1.minute, second=dt1.second, microsecond=dt1.microsecond)\n",
+    "print(dt2 == dt3)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2021-08-30 20:48:07.967148\n",
+      "2022-01-01 20:48:07.967148\n",
+      "True\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Converting a datetime object to a string"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "now = dt.now().astimezone()\n",
+    "print(str(now))\n"
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
