doplneni metod dt.strftime() a dt.strptime()

--- a/01. Date, Time, Time Series Data.ipynb
+++ b/01. Date, Time, Time Series Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "source": [
     "from datetime import datetime as dt\n",
     "from datetime import timedelta as td\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "source": [
     "dt1 = dt.now()    # current time\n",
     "print(dt1)"
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2021-08-30 18:05:41.966389\n"
+      "2021-09-01 23:44:27.024720\n"
      ]
     }
    ],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "source": [
     "print(f\"year: {dt1.year}\")\n",
     "print(f\"month: {dt1.month}\")\n",
@@ -47,7 +47,8 @@
     "print(f\"minute: {dt1.minute}\")\n",
     "print(f\"second: {dt1.second}\")\n",
     "print(f\"microseconds: {dt1.microsecond}\")\n",
-    "print(f\"timezone: {dt1.tzinfo}\")"
+    "print(f\"timezone: {dt1.tzinfo}\")\n",
+    "print(f\"Current time: {dt1.time()}\")"
    ],
    "outputs": [
     {
@@ -55,13 +56,14 @@
      "name": "stdout",
      "text": [
       "year: 2021\n",
-      "month: 8\n",
-      "day: 30\n",
-      "hour: 18\n",
-      "minute: 5\n",
-      "second: 41\n",
-      "microseconds: 966389\n",
-      "timezone: None\n"
+      "month: 9\n",
+      "day: 1\n",
+      "hour: 23\n",
+      "minute: 44\n",
+      "second: 27\n",
+      "microseconds: 24720\n",
+      "timezone: None\n",
+      "Current time: 23:44:27.024720\n"
      ]
     }
    ],
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "source": [
     "# metoda date - datovy typ dt.date - vraci datum \n",
     "print(dt2.date())   \n",
@@ -121,7 +123,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "18:05:41.966389\n",
+      "23:44:27.024720\n",
       "<class 'datetime.time'>\n"
      ]
     }
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "source": [
     "# timedelta ... prace s trvanim casu\n",
     "td1 = td(days=5, hours=3, minutes=30)\n",
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "source": [
     "# today's date\n",
     "today = dt.today()\n",
@@ -209,14 +211,14 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Todays date: 2021-08-30 20:35:32.058039\n",
-      "2021-08-30 20:35:32.058488\n",
-      "5 days later: 2021-09-04 20:35:32.058039\n",
-      "5 days ago: 2021-08-25 20:35:32.058039\n",
+      "Todays date: 2021-09-01 23:44:27.219682\n",
+      "2021-09-01 23:44:27.219777\n",
+      "5 days later: 2021-09-06 23:44:27.219682\n",
+      "5 days ago: 2021-08-27 23:44:27.219682\n",
       "True\n",
-      "Time now: 20:35:32.059196\n",
-      "Time + 5 min: 20:40:32.059196\n",
-      "Time - 5 minutes: 20:30:32.059196\n",
+      "Time now: 23:44:27.220210\n",
+      "Time + 5 min: 23:49:27.220210\n",
+      "Time - 5 minutes: 23:39:27.220210\n",
       "True\n"
      ]
     }
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "source": [
     "dt1 = dt.now()\n",
     "print(dt1)\n",
@@ -246,8 +248,8 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "2021-08-30 20:48:07.967148\n",
-      "2022-01-01 20:48:07.967148\n",
+      "2021-09-01 23:44:27.249707\n",
+      "2022-01-01 23:44:27.249707\n",
       "True\n"
      ]
     }
@@ -257,18 +259,68 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Converting a datetime object to a string"
+    "## Converting a datetime object to a string (metoda .strftime())"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "source": [
-    "now = dt.now().astimezone()\n",
-    "print(str(now))\n"
+    "now_a = dt.now().astimezone()   # current time + timezone\n",
+    "print(str(now_a))\n",
+    "\n",
+    "# metoda strftime - prevede cas na string do specifikovaneho formatu\n",
+    "print(now_a.strftime(\"%d-%m-%Y %H:%M:%S %Z\"))\n",
+    "print(type(now_a))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2021-09-01 23:52:14.102060+02:00\n",
+      "01-09-2021 23:52:14 CEST\n",
+      "<class 'datetime.datetime'>\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Creating a datetime object from a string (metoda.strptime())"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "source": [
+    "now_str = \"13-1-2021 15:53:39 +06:00\"\n",
+    "now_b = dt.strptime(now_str, \"%d-%m-%Y %H:%M:%S %z\")\n",
+    "print(now_b)\n",
+    "print(type(now_b))\n",
+    "\n",
+    "# pokud nacitam string do datetime objektu - musim ho nacist cely - nemuzu jenom kus, jinak to vyhodi chybu, takze si musim string rozsekat nebo ho nacist cely\n",
+    "try:\n",
+    "    now_c = dt.strptime(now_str, \"%d-%m-%Y\")\n",
+    "except:\n",
+    "    print(\"chyba, musim nacist cely retezec\")\n",
+    "else:\n",
+    "    print(now_c)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2021-01-13 15:53:39+06:00\n",
+      "<class 'datetime.datetime'>\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
@@ -276,7 +328,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.8.8",
+   "version": "3.9.5",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -288,10 +340,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3.9.5 64-bit (conda)"
   },
   "interpreter": {
-   "hash": "65b40017f2b80ee436eb3e903c78a9438c26239f6b288f290bbc5319beed81de"
+   "hash": "986f064d116e15963c332df0c3d0382e972d1a1773359d464bffe7da98105279"
   }
  },
  "nbformat": 4,
